@@ -14,6 +14,9 @@ Changes
 Fixes
 -----
 
+ - Fixed an issue that caused extra spaces to be added 
+   to the formatted console results.
+
  - Fixed an issue that caused ``NULL`` generated column values 
    not to be displayed in the tables view.  
 
